--- a/data/com.markdeepwell.GitY.desktop
+++ b/data/com.markdeepwell.GitY.desktop
@@ -1,12 +1,9 @@
 [Desktop Entry]
-Version=1.0
 Type=Application
 Name=GitY
 Comment=Git repository browser
 Exec=gity
-Icon=com.markdeepwell.gity
-Terminal=false
+Icon=com.markdeepwell.GitY
 Categories=Development;RevisionControl;
 StartupNotify=true
 MimeType=x-scheme-handler/git;
-
