--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,10 @@ adw = { version = "0.8", package = "libadwaita", features = ["v1_5"] }
 glib-build-tools = "0.21.0"
 sourceview5 = "0.10.0"
 dirs = "6.0"
+ashpd = { version = "0.12.1", features = ["glib", "tokio"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+tokio = { version = "1", features = ["rt"] }
 
 [build-dependencies]
 glib-build-tools = "0.21.0"
