feat: Replace application icons with new scalable and symbolic versions
- Replace the previous application icons with new, improved versions
  designed to better match system styling.
- Update `meson.build` to correctly install both the normal (scalable)
  and symbolic icons to their respective XDG standard directories:
  - Scalable icon to `.../icons/hicolor/scalable/apps/`
  - Symbolic icon to `.../icons/hicolor/symbolic/apps/`

The new icons were designed by Suyog Tandel(lockedmutex on GitHub) and are contributed under
the same license as the repository (GPL-3.0-or-later).

Signed-off-by: Suyog Tandel <git@suyogtandel.in>

--- a/meson.build
+++ b/meson.build
@@ -86,10 +86,17 @@ install_data(
 )
 
 # Icon installation (SVG for scalable icons)
+
+# 1. Install Normal (Scalable) App Icon
 install_data(
-  'data/icons/app.svg',
+  'data/icons/hicolor/scalable/apps/com.markdeepwell.GitY.svg',
   install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'apps',
-  rename: 'com.markdeepwell.GitY.svg',
+)
+
+# 2. Install Symbolic Icon
+install_data(
+  'data/icons/hicolor/symbolic/apps/com.markdeepwell.GitY-symbolic.svg',
+  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'symbolic' / 'apps',
 )
 
 # Compile schemas in install location
